{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Parameters",
            "id": "70de5006-62b9-43d7-b9c6-b30564b049fb",
            "actions": [
                {
                    "name": "ThrowGranade",
                    "type": "Button",
                    "id": "ed67fdab-afbe-4599-a2a4-4206d70cab5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrowKnife",
                    "type": "Button",
                    "id": "3371c16e-3842-45f3-b090-e2e94827c62f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseMass",
                    "type": "Button",
                    "id": "bfc5e360-083e-4439-a4b0-0be0d8af698d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseGravity",
                    "type": "Button",
                    "id": "eb46cebb-ffea-4f30-aefb-31c4a8c6fd53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseThrowPower",
                    "type": "Button",
                    "id": "94b231b1-3d18-41e5-afde-e693a6cacfe7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseExplosionForce",
                    "type": "Button",
                    "id": "e655fd9f-3cb2-42fd-880a-626065ba6342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseObjectRadius",
                    "type": "Button",
                    "id": "0a34155b-0f59-4b35-9f2a-29830cea391c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncraseMass",
                    "type": "Button",
                    "id": "9eb84517-d90c-4391-bbd0-14560a8a4a72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncraseGravity",
                    "type": "Button",
                    "id": "9c92aa59-3672-4f17-a04c-9441b8fff96e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncraseThrowPower",
                    "type": "Button",
                    "id": "4883a41c-fc21-4565-a6b9-5f243d5638a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncraseExplosionForce",
                    "type": "Button",
                    "id": "bcb7df18-572e-4943-94d0-c1d0379ad9da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncraseObjectRadius",
                    "type": "Button",
                    "id": "1a80f889-061a-44e9-856a-e7b0e209610b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e244c2c7-a46a-496d-a360-cebd18329e18",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowGranade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f006ac23-c0aa-4d5c-8592-2a5217a29612",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowKnife",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a25b66fd-10a9-4dd3-b22a-4be924ce020c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseMass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0154f1ea-ebd7-4c99-9f18-41795d6d8ee1",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseMass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f6c2d3b-9103-443e-9e51-d7a95a8acf09",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseMass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f3b2fe8-cb2a-42af-b942-352c3f04c201",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseMass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49f6e1c9-a7cf-4675-ac1b-7a21bbb28bf0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d198bb4b-eae9-44c7-bae0-8bf993e09488",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9db400a-10d1-4bbc-9d69-1b8dd21bdeb5",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7e7b17c-3856-47ed-9c38-1b825fc308d0",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "553f6018-69b7-4269-b265-e206332b41f6",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseThrowPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc825b82-ec86-4a5d-ac00-4408192506d8",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseThrowPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "070a9d18-0bb0-4a2e-a4a4-ac25914e8d0f",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseThrowPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e9e86ce-66c6-414a-9ebe-aa3697902606",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseThrowPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad24166c-4541-4295-addb-6f0c964bbc45",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseExplosionForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a463775-cc39-4e2d-99b7-64c33f1eeac9",
                    "path": "<Keyboard>/numpad7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseExplosionForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cc2cc72-b66c-4eff-bda4-f521010fe5fc",
                    "path": "<Keyboard>/numpad8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseExplosionForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07cb9848-6311-4aa4-8ae5-9572b93f00ef",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseExplosionForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f9ab181-0908-4d75-8576-0620deb9b1c7",
                    "path": "<Keyboard>/numpad9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseObjectRadius",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af4ef8c4-1699-4f95-ac9a-1637b9395b63",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseObjectRadius",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d37c0c4-6cfc-40a4-8bd5-1831cc4fa12d",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseObjectRadius",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8af79f5e-ae63-4adc-a423-ad3e06ef5fda",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncraseObjectRadius",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}